stylesheet.css
/* ... */
#facebook:hover{
    background-color: rgb(255, 255, 255);
    border: 1px solid rgb(255, 255, 255);
    color: rgb(0, 136, 255);
    border-radius: 12px;
}
#x{
    background-color: rgb(0, 0, 0);
    border: 1px solid rgb(255, 255, 255);
    border-radius: 10px;
    transition: background-color 0.3s ease, border 0.3s ease, color 0.3s ease;
}
#x:hover{
    background-color: white;
    color: black;
    border: 1px solid black
}
#instagram{
    background-color: rgb(157, 0, 255);
    border: 0px solid rgb(157, 0, 255);
    border-radius: 10px;
    transition: background-color 0.3s ease, color 0.3s ease;
}
#instagram:hover{
    background-color: white;
    color: rgb(157, 0, 255);
}
#yt{
    background-color: rgb(255, 0, 0);
    border: 0px solid rgb(255, 0, 0);
    border-radius: 10px;
    transition: background-color 0.3s ease, color 0.3s ease;
}
#yt:hover{
    background-color: white;
    color: rgb(255, 0, 0);
}
#discord{
    background-color: rgb(68, 121, 255);
    border: 0px solid rgb(68, 121, 255);
    border-radius: 10px;
    transition: background-color 0.3s ease, border 0.3s ease, color 0.3s ease;
}
#discord:hover{
    background-color: white;
    color: rgb(68, 121, 255);
}
#reddit{
    background-color: rgb(255, 77, 0);
    border: 1px solid rgb(255, 77, 0);
    border-radius: 10px;
    transition: background-color 0.3s ease, border 0.3s ease, color 0.3s ease;
}
#reddit:hover{
    background-color: white;
    color: rgb(255, 77, 0);
    border: 1px solid white;
}

.logo-marks{
    display: flex;
    align-items: center;
    align-content: center;
    justify-content: space-around;
    margin: 50px 0px;
}

.logo-marks img{
    width: 300px;
    cursor: pointer;
}
.footer-navlinks{
    display: flex;
    justify-content: space-around;
    width: 100%;
    padding: 0 200px;
    box-sizing: border-box;
    margin-bottom: 5%;
    color: grey;
}
.footer-navlinks a{
    text-decoration: none;
    color: grey;
    text-transform: uppercase;
    transition: color 0.3s ease;
}
.footer-navlinks a:hover{
    color: white;
}

@media screen and (max-width: 650px){
    html, body {
        overflow-x: hidden;
        max-width: 100%;
    }
    #welcome-msg{
        display: none;
    }
    #logo{
        width: 100px;
        position: relative;
        left: 0;
        transform: translateX(0%);
        padding-left: 20px;
    }
    #logo{
    cursor: pointer;
    }
    header{
        height: 50px;
        display: flex;
    }
    .head-left{
        display: none;
    }
    .head-right{
        width: 100%;
        justify-content: end;
    }
    .head-right a{
        font-size: 10px;
    }
    .main-info{
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 10px;
        left: 50%;
        transform: translateX(-50%);
        width: 100%;
    }
    .main-info p{
        margin: 0px;
    }
    .main-info h1{
        font-size: 40px;
        margin: 0px;
    }
    #video-name{
        font-size: 40px;
        width: 100%;
        text-align: center;
        justify-content: center;
        bottom: 5%;
    }
    #next{
        left: 80%;
    }
    .info-cards{
        display: flex;
        flex-direction: column;
    }
    .card:nth-child(2){
        height: 40vh;
    }
    .card h1{
        font-size: 30px;
        padding-left: 10px;
    }
    .card p{
        top: 60px;
        left: 5%;
    }
    .sub-form td{
        text-align: center;
    }
    .sub-form-header{
        padding-left: 0px;
    }
    .social-media-nav{
    padding: 0px 40px;
    }
    .footer-navlinks{
        display: flex;
        flex-direction: column;
        padding: 0 0px;
        align-items: center;
        gap: 20px;
    }
    .footer-navlinks span{
        display: none;
    }
}

